force-app/main/default/objects/PricebookEntry/fields/FlexBoard__c.field-meta.xml
<CustomField>
    <fullName>FlexBoard__c</fullName>
    <label>FlexBoard</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>