force-app/main/default/objects/PricebookEntry/fields/FlexHead__c.field-meta.xml
<CustomField>
    <fullName>FlexHead__c</fullName>
    <label>FlexHead</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>