force-app/main/default/objects/PricebookEntry/fields/IsPercent__c.field-meta.xml
<CustomField>
    <fullName>IsPercent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPercent</label>
    <type>Checkbox</type>
</CustomField>