force-app/main/default/objects/PricebookEntry/fields/PercentValue__c.field-meta.xml
<CustomField>
    <fullName>PercentValue__c</fullName>
    <label>PercentValue</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>